--- a/MyMarket/Customer/Customer.Master
+++ b/MyMarket/Customer/Customer.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Customer.master.cs" Inherits="Market.Customer.Customer" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Customer.master.cs" Inherits="MyMarket.Customer.Customer" %>
 
 <!DOCTYPE html>
 
@@ -11,7 +11,7 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="../CustomerTemplate/img/favicon.ico" rel="icon">
+    <link href="../CustomerData/img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,10 +21,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="../CustomerTemplate/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="../CustomerData/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="../CustomerTemplate/css/style.css" rel="stylesheet">
+    <link href="../CustomerData/css/style.css" rel="stylesheet">
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -221,14 +221,14 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="../CustomerTemplate/lib/easing/easing.min.js"></script>
-    <script src="../CustomerTemplate/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../CustomerData/lib/easing/easing.min.js"></script>
+    <script src="../CustomerData/lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Contact Javascript File -->
-    <script src="../CustomerTemplate/mail/jqBootstrapValidation.min.js"></script>
-    <script src="../CustomerTemplate/mail/contact.js"></script>
+    <script src="../CustomerData/mail/jqBootstrapValidation.min.js"></script>
+    <script src="../CustomerData/mail/contact.js"></script>
     <!-- Template Javascript -->
-    <script src="../CustomerTemplate/js/main.js"></script>
+    <script src="../CustomerData/js/main.js"></script>
 
 
 </body>
