--- a/MyMarket/Customer/Customer.Master
+++ b/MyMarket/Customer/Customer.Master
@@ -11,7 +11,7 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="../CustomerData/img/favicon.ico" rel="icon">
+   <!-- <link href="../CustomerData/img/favicon.ico" rel="icon">-->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -22,6 +22,7 @@
 
     <!-- Libraries Stylesheet -->
     <link href="../CustomerData/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="../CustomerData/css/style.css" rel="stylesheet">
@@ -34,7 +35,8 @@
             //passes on every "a" tag
             $("#navbarCollapse a").each(function () {
                 // check if its the same on the address bar
-                if(url == (this.href))
+                if (url == (this.href))
+                    $(this).addClass("active");
             })
 
         })
@@ -124,7 +126,7 @@
                         </button>
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                             <div class="navbar-nav mr-auto py-0">
-                                <a href="DefaultCustomer.aspx" class="nav-item nav-link active">Home</a>
+                                <a href="DefaultCustomer.aspx" class="nav-item nav-link">Home</a>
                                 <a href="Market.aspx" class="nav-item nav-link">Shop</a>
                                 <a href="MarketDetail.aspx" class="nav-item nav-link">Shop Detail</a>
                                 <div class="nav-item dropdown">
@@ -220,7 +222,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 px-xl-0 text-center text-md-right">
-                    <img class="img-fluid" src="img/payments.png" alt="">
+                    <img class="img-fluid" src="../CustomerData/img/payments.png" alt="">
                 </div>
             </div>
         </div>
