--- a/MyMarket/Admin/Admin.Master
+++ b/MyMarket/Admin/Admin.Master
@@ -128,8 +128,8 @@
                                     aria-haspopup="true" aria-expanded="false">
                                     <img src="../AdminData/assets/images/users/profile-pic.jpg" alt="user" class="rounded-circle"
                                         width="40">
-                                    <span class="ml-2 d-none d-lg-inline-block"><span>Hello,</span> <span
-                                        class="text-dark">Jason Doe</span> <i data-feather="chevron-down"
+                                    <span class="ml-2 d-none d-lg-inline-block"><span>Welcome back,</span> <span
+                                        class="text-dark">Yaroslav</span> <i data-feather="chevron-down"
                                             class="svg-icon"></i></span>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right user-dd animated flipInY">
