--- a/MyMarket/Admin/Admin.Master
+++ b/MyMarket/Admin/Admin.Master
@@ -20,6 +20,10 @@
     <link href="../AdminData/assets/extra-libs/jvector/jquery-jvectormap-2.0.2.css" rel="stylesheet" />
     <!-- Custom CSS -->
     <link href="../AdminData/dist/css/style.min.css" rel="stylesheet">
+    <!-- Datatables CSS -->
+    <link href="../AdminData/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="../AdminData/datatables/css/responsive.bootstrap4.min.css" rel="stylesheet" />
+    <link href="../AdminData/datatables/css/icon-font.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
