--- a/MyMarket/Admin/Admin.Master
+++ b/MyMarket/Admin/Admin.Master
@@ -466,5 +466,23 @@
     <script src="../AdminData/assets/extra-libs/jvector/jquery-jvectormap-world-mill-en.js"></script>
     <script src="../AdminData/dist/js/pages/dashboards/dashboard1.min.js"></script>
 
+    <!-- Datatables JS -->
+    <script src="../AdminData/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="../AdminData/datatables/js/buttons.bootstrap4.min.js"></script>
+    <script src="../AdminData/datatables/js/dataTables.responsive.min.js"></script>
+    <script src="../AdminData/datatables/js/responsive.bootstrap4.min.js"></script>
+
+    <!-- Datatables Buttons for export -->
+    <script src="../AdminData/datatables/js/dataTables.buttons.min.js"></script>
+    <script src="../AdminData/datatables/js/buttons.bootstrap4.min.js"></script>
+    <script src="../AdminData/datatables/js/buttons.print.min.js"></script>
+    <script src="../AdminData/datatables/js/buttons.html5.min.js"></script>
+    <script src="../AdminData/datatables/js/buttons.flash.min.js"></script>
+    <script src="../AdminData/datatables/js/pdfmake.min.js"></script>
+    <script src="../AdminData/datatables/js/vfs_fonts.js"></script>
+
+    <!-- Datatables Setting JS -->
+    <script src="../AdminData/datatables/js/datatable-setting.js"></script>
+
 </body>
 </html>
