--- a/MyMarket/Admin/Admin.Master
+++ b/MyMarket/Admin/Admin.Master
@@ -471,7 +471,8 @@
 
     <!-- Datatables JS -->
     <script src="../AdminData/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="../AdminData/datatables/js/buttons.bootstrap4.min.js"></script>
+    <script src="../AdminData/datatables/js/dataTables.bootstrap4.min.js"></script>
+  <!--  <script src="../AdminData/datatables/js/buttons.bootstrap4.min.js"></script> -->
     <script src="../AdminData/datatables/js/dataTables.responsive.min.js"></script>
     <script src="../AdminData/datatables/js/responsive.bootstrap4.min.js"></script>
 
