complete admin category part

--- a/MyMarket/Admin/Admin.Master
+++ b/MyMarket/Admin/Admin.Master
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../AdminData/assets/images/favicon.png">
-    <title>Adminmart Template - The Ultimate Multipurpose admin template</title>
+    <title>Admin Area MyMarket</title>
     <!-- Custom CSS -->
     <link href="../AdminData/assets/extra-libs/c3/c3.min.css" rel="stylesheet">
     <link href="../AdminData/assets/libs/chartist/dist/chartist.min.css" rel="stylesheet">
@@ -113,21 +113,23 @@
                         <!-- ============================================================== -->
                         <ul class="navbar-nav float-right">
                             <!-- ============================================================== -->
-                         <% /*<!-- Search -->
-                            <!-- ============================================================== -->
-                            <li class="nav-item d-none d-md-block">
-                                <a class="nav-link" href="javascript:void(0)">
-                                    <form>
-                                        <div class="customize-input">
-                                            <input class="form-control custom-shadow custom-radius border-0 bg-white"
-                                                type="search" placeholder="Search" aria-label="Search">
-                                            <i class="form-control-icon" data-feather="search"></i>
-                                        </div>
-                                    </form>
-                                </a>
-                            </li>
-                            <!-- ============================================================== -->*/
-                                 %>   
+                         <%/*<!-- Search -->
+                                                <!-- ============================================================== -->
+                                                <li class="nav-item d-none d-md-block">
+                                                    <a class="nav-link" href="javascript:void(0)">
+                                                        <form>
+                                                            <div class="customize-input">
+                                                                <input class="form-control custom-shadow custom-radius border-0 bg-white"
+                                                                    type="search" placeholder="Search" aria-label="Search">
+                                                                <i class="form-control-icon" data-feather="search"></i>
+                                                            </div>
+                                                        </form>
+                                                    </a>
+                                                </li>
+                                                <!-- ============================================================== -->*/
+
+
+%>   
                             <!-- User profile and search -->
                             <!-- ============================================================== -->
                             <li class="nav-item dropdown">
@@ -172,14 +174,14 @@
                     <nav class="sidebar-nav">
                         <ul id="sidebarnav">
                             <li class="sidebar-item"><a class="sidebar-link sidebar-link" href="Dashboard.aspx"
-                                aria-expanded="false"><i data-feather="home" class="feather-icon"></i><span
+                                aria-expanded="false"><i class="fas fa-tachometer-alt"></i><span
                                     class="hide-menu">Dashboard</span></a></li>
                             <li class="list-divider"></li>
-                            <li class="nav-small-cap"><span class="hide-menu">Applications</span></li>
+                            <li class="nav-small-cap"><span class="hide-menu">Categories</span></li>
 
-                            <li class="sidebar-item"><a class="sidebar-link" href="Contact.aspx"
-                                aria-expanded="false"><i data-feather="tag" class="feather-icon"></i><span
-                                    class="hide-menu">Contact</span></a>
+                            <li class="sidebar-item"><a class="sidebar-link" href="Category.aspx"
+                                aria-expanded="false"><i class="fas fa-tag"></i><span
+                                    class="hide-menu">Category</span></a>
                             </li>
                             <li class="sidebar-item"><a class="sidebar-link sidebar-link" href="app-chat.html"
                                 aria-expanded="false"><i data-feather="message-square" class="feather-icon"></i><span
@@ -393,12 +395,12 @@
                 <div class="page-breadcrumb">
                     <div class="row">
                         <div class="col-7 align-self-center">
-                            <h3 class="page-title text-truncate text-dark font-weight-medium mb-1">Good Morning Yaroslav!</h3>
+                            <h3 class="page-title text-truncate text-dark font-weight-medium mb-1"> <%Response.Write(Session["breadCumbTitle"]); %></h3>
                             <div class="d-flex align-items-center">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb m-0 p-0">
-                                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a>
-                                        </li>
+                                        <li class="breadcrumb-item"><a href="Dashboard.aspx">Dashboard</a></li>
+                                        <li class="breadcrumb-item text-muted active" aria-current="page"> <%Response.Write(Session["breadCumbPage"]); %></li>
                                     </ol>
                                 </nav>
                             </div>
